// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RyvroVoiceButton Snapshot should match snapshot in active state 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "bottom": 24,
      "height": 76,
      "justifyContent": "center",
      "position": "absolute",
      "right": 20,
      "width": 76,
      "zIndex": 100,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#147cff",
          "borderRadius": 38,
          "height": 76,
          "position": "absolute",
          "width": 76,
        },
        {
          "opacity": 0.6,
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  />
  <View
    accessibilityLabel="Open Ryvro voice assistant"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#20f4dc",
        "borderColor": "rgba(32, 244, 220, 0.18)",
        "borderRadius": 30,
        "borderWidth": 6,
        "elevation": 8,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "shadowColor": "#20f4dc",
        "shadowOffset": {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.34,
        "shadowRadius": 22,
        "width": 60,
      }
    }
  >
    <Text
      color="#02070b"
      name="mic"
      size={26}
      testID="icon-mic"
    >
      mic
    </Text>
  </View>
</View>
`;

exports[`RyvroVoiceButton Snapshot should match snapshot in idle state 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "bottom": 24,
      "height": 76,
      "justifyContent": "center",
      "position": "absolute",
      "right": 20,
      "width": 76,
      "zIndex": 100,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#147cff",
          "borderRadius": 38,
          "height": 76,
          "position": "absolute",
          "width": 76,
        },
        {
          "opacity": 0,
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  />
  <View
    accessibilityLabel="Open Ryvro voice assistant"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#20f4dc",
        "borderColor": "rgba(32, 244, 220, 0.18)",
        "borderRadius": 30,
        "borderWidth": 6,
        "elevation": 8,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "shadowColor": "#20f4dc",
        "shadowOffset": {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.34,
        "shadowRadius": 22,
        "width": 60,
      }
    }
  >
    <Text
      color="#02070b"
      name="mic"
      size={26}
      testID="icon-mic"
    >
      mic
    </Text>
  </View>
</View>
`;
